--- a/packages/oldschoolgg/src/layouts/Layout.astro
+++ b/packages/oldschoolgg/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import { ClientRouter } from "astro:transitions";
 import Header from "../components/astro/Header.astro";
 import "../styles/global.css";
 
@@ -52,6 +53,7 @@ const { pageTitle, desc, keywords, image, url } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" href="/favicon.ico" />
+		<ClientRouter />
 	</head>
 	<body class="dark">
 		<Header />
