Improve/fix wiki css issues

--- a/docs/src/components/Header.astro
+++ b/docs/src/components/Header.astro
@@ -1,15 +1,13 @@
 ---
-import LanguageSelect from 'virtual:starlight/components/LanguageSelect';
-import Search from 'virtual:starlight/components/Search';
-import SiteTitle from 'virtual:starlight/components/SiteTitle';
-import SocialIcons from 'virtual:starlight/components/SocialIcons';
-import config from 'virtual:starlight/user-config';
-import { PreactThemeSelect } from './PreactThemeSelect';
+import Search from "virtual:starlight/components/Search";
+import SiteTitle from "virtual:starlight/components/SiteTitle";
+import config from "virtual:starlight/user-config";
+import { PreactThemeSelect } from "./PreactThemeSelect";
+import Icon from "./Icon.astro";
 
-/**
- * Render the `Search` component if Pagefind is enabled or the default search component has been overridden.
- */
-const shouldRenderSearch = config.pagefind || config.components.Search !== '@astrojs/starlight/components/Search.astro';
+const shouldRenderSearch =
+	config.pagefind ||
+	config.components.Search !== "@astrojs/starlight/components/Search.astro";
 ---
 
 <div class="header sl-flex">
@@ -21,10 +19,22 @@ const shouldRenderSearch = config.pagefind || config.components.Search !== '@ast
 	</div>
 	<div class="sl-hidden md:sl-flex right-group">
 		<div class="sl-flex social-icons">
-			<SocialIcons {...Astro.props} />
+			<a
+				href="https://github.com/oldschoolgg/oldschoolbot"
+				rel="me"
+				class="sl-flex social-icon"
+			>
+				<Icon name={"github"} />
+			</a>
+			<a
+				href="https://discord.gg/ob"
+				rel="me"
+				class="sl-flex social-icon"
+			>
+				<Icon name={"discord"} />
+			</a>
+			<PreactThemeSelect client:load />
 		</div>
-        <PreactThemeSelect client:load  />
-		<LanguageSelect {...Astro.props} />
 	</div>
 </div>
 
@@ -47,7 +57,7 @@ const shouldRenderSearch = config.pagefind || config.components.Search !== '@ast
 		align-items: center;
 	}
 	.social-icons::after {
-		content: '';
+		content: "";
 		height: 2rem;
 		border-inline-end: 1px solid var(--sl-color-gray-5);
 	}
@@ -60,19 +70,31 @@ const shouldRenderSearch = config.pagefind || config.components.Search !== '@ast
 			--__toc-width: 0rem;
 		}
 		.header {
-			--__sidebar-width: max(0rem, var(--sl-content-inline-start, 0rem) - var(--sl-nav-pad-x));
+			--__sidebar-width: max(
+				0rem,
+				var(--sl-content-inline-start, 0rem) - var(--sl-nav-pad-x)
+			);
 			--__main-column-fr: calc(
 				(
-						100% + var(--__sidebar-pad, 0rem) - var(--__toc-width, var(--sl-sidebar-width)) -
-							(2 * var(--__toc-width, var(--sl-nav-pad-x))) - var(--sl-content-inline-start, 0rem) -
+						100% + var(--__sidebar-pad, 0rem) -
+							var(--__toc-width, var(--sl-sidebar-width)) -
+							(2 * var(--__toc-width, var(--sl-nav-pad-x))) -
+							var(--sl-content-inline-start, 0rem) -
 							var(--sl-content-width)
-					) / 2
+					) /
+					2
 			);
 			display: grid;
 			grid-template-columns:
         /* 1 (site title): runs up until the main content column’s left edge or the width of the title, whichever is the largest  */
 				minmax(
-					calc(var(--__sidebar-width) + max(0rem, var(--__main-column-fr) - var(--sl-nav-gap))),
+					calc(
+						var(--__sidebar-width) +
+							max(
+								0rem,
+								var(--__main-column-fr) - var(--sl-nav-gap)
+							)
+					),
 					auto
 				)
 				/* 2 (search box): all free space that is available. */
